2008-11-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s_out.erl: exports the DNS resolution
	function.

2008-10-27  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl: Open ejabberd.log before parsing
	ejabberd.cfg and translation files (EJAB-777)

2008-10-17  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix badarg issue on get_roster_info
	when allowed roster groups is not defined

	* src/mod_pubsub/mod_pubsub.erl: fix remove_user not unsubscribing
	user (EJAB-684)

	* src/mod_pubsub/node_default.erl: does not write item when max_items
	set to 0 (solves EJAB-768)

2008-10-13  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/ejabberd_odbc.erl: log MySQL driver messages.

2008-10-07  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_roster_odbc.erl: fix MySQL multiple requests issue.

2008-10-06  Badlop  <badlop@process-one.net>

	* doc/guide.html: Regenerated

	* doc/guide.tex: Fix a problem in SVN merge from trunk

2008-10-06  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_rdbms.erl: fix SQL database reconnection
	issues (EJAB-764) and add odbc_start_interval configuration
	directive (default to 30 seconds).
	* src/odbc/ejabberd_odbc.erl: likewise.
	* src/odbc/ejabberd_odbc_sup.erl: likewise.
	* doc/guide.tex: likewise.

2008-10-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/odbc_queries.erl: Fix syntax error on update_roster_sql query.

2008-10-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/odbc_queries.erl: Fix empty query that fails on MySQL (merged from trunk).

2008-10-01  Mickael Remond  <mremond@process-one.net>

	* src/mod_shared_roster.erl: Correct roster push when changing
	a shared roster entry name (EJAB-738).

2008-09-30  Badlop  <badlop@process-one.net>

	* src/*/Makefile.win32: Provide explicit beam filenames because
	nmake does not accept wildcards (thanks to Attila
	Vangel)(EJAB-543)
