@@ -1,3 +1,7 @@
+2008-11-12  Badlop  <badlop@process-one.net>
+
+	* doc/guide.tex: Improve legibility of mod_irc example config
+
 2008-11-08  Mickael Remond  <mremond@process-one.net>
 
 	* src/ejabberd_s2s_out.erl: exports the DNS resolution
